# moviesentiment

./: .env  .gitignore  README.md  azureml_script.py  conda_dependencies.yml  dockerfile  model_development.ipynb  pyproject.toml  run.py
app/: __init__.py  config.py
app/controllers/: sentiment_controllers.py
app/helpers/: errors_helper.py
app/middlewares/: errors_handler.py
app/routes/: __init__.py  sentiment_routes.py
app/services/: sentiment_services.py
app/utils/: loggers.py  responses.py
